[FIX] show activities button was not showing on hover

--- a/src/sass/styles.scss
+++ b/src/sass/styles.scss
@@ -204,10 +204,14 @@ body {
       opacity: 0;
       transition: opacity 0.3s ease;
     }
+    &:hover {
+      .month__activity_toggle_show {
+        opacity: 1;
+      }
+    }
     &_event {
       &:hover {
-        .month__activity_delete,
-        .month__activity_toggle_show {
+        .month__activity_delete {
           opacity: 1;
         }
       }
